--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <header>
+        <header role="main">
             <div class="card">
                 <div class="icon">
                     <img src="images/icon-star.svg" alt="" />
